fixed nav behind content

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -13,7 +13,7 @@ h1, h2, h3, h4 {
 .hero,
 .cta {
     text-align: center;
-    margin: 4em 2em;
+    padding: 4em 2em;
 
     &__title {
         font-size: 4.5rem;
@@ -24,6 +24,12 @@ h1, h2, h3, h4 {
         font-weight: 400;
 
     }
+}
+
+.cta {
+    background-color: $white;
+    position: relative;
+    z-index: 2;
 }
 
 @media screen and (min-width: 900px) {
