--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,13 +1,14 @@
 .footer {
-    display: none;
     box-shadow: 0 -2px 0 $main-color;
-    position: absolute;
-    padding: 0 $mobile-margin;
+    display: none;
     font-size: 1.2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 $mobile-margin;
+    position: absolute;
     width: 100%;
+    z-index: 3;
 
     &__text {
         font-size: 1.2rem;
@@ -55,9 +56,9 @@
         height: 21px;
     }
 
-    .insta {
-        height: 24px;
-    }
+    // .insta {
+    //     height: 24px;
+    // }
 }
 
 @media screen and (min-width: 700px) {
