--- a/scss/layout/_gallery.scss
+++ b/scss/layout/_gallery.scss
@@ -1,9 +1,12 @@
 .gallery {
-  width: $gallery-width;
-  text-align: center;
+  background-color: $white;
   display: grid;
   grid-auto-rows: 11;
   gap: $gallery-gutter;
+  position: relative;
+  text-align: center;
+  width: $gallery-width;
+  z-index: 2;
 
   &__item {
     position: relative;
